make it better with reduce